--- a/projects/ngx-pattern-demo/tsconfig.app.json
+++ b/projects/ngx-pattern-demo/tsconfig.app.json
@@ -9,7 +9,8 @@
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "../../dist/**/*.d.ts"
   ],
   "exclude": [
     "src/test.ts",
